--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         .container {
 
-            height: 100vh;
-            /* border: 2px solid black; */
+            height: 75vh;
+            border: 2px solid black; 
             display: flex;
             justify-content: center;
             align-items: center;
@@ -31,19 +31,19 @@
 
             height: 70%;
             width: 30%;
-            /* border: 2px solid black; */
+            border: 2px solid black; 
         }
 
         #inner-box-1 {
 
             height: 70%;
-            /* border: 2px dashed black; */
+             border: 2px dashed black; 
         }
 
         #inner-box-2 {
 
             height: 10%;
-            /* border: 2px dashed red; */
+             border: 2px dashed red; 
         }
 
         #inner-box-3 {
@@ -137,7 +137,8 @@
 
             width: 30%;
             height: 48%;
-            margin: 0px 5px;
+            margin: 10px 5px;
+            
         }
 
         @media (max-width:900px) {
