--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         #inner-box-3 {
 
             height: 20%;
-            border: 2px dashed green;z
+            border: 2px dashed green;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -138,15 +138,19 @@
             width: 30%;
             height: 48%;
             margin: 10px 5px;
-            
+
+        }
+        #inner-box-5 img{
+            width: 100%;
+            height: 100%;
         }
 
         @media (max-width:900px) {
 
-            #inner-box-5{
+             #inner-box-5{
 
                 display: none;
-            }
+            } 
 
             #inner{
 
@@ -163,7 +167,8 @@
 
 
         <div class="box" id="inner-box-5">
-            <img src="" alt="">
+            <img src="screenshot3.png" alt="">
+            
         </div>
         <div class="box" id="inner">
             <div class="inner-box" id="inner-box-1">
